src/objects/QPMS__Inspection_History__c.object
<CustomObject>
    <description>This is a common object for all object History</description>
    <fields>
        <fullName>QPMS__ASQ_LTPD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used for ASQ/LTPD audit trail</description>
        <label>ASQ/LTPD</label>
        <referenceTo>QPMS__ASQ_LTPD__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ActionStatus__c</fullName>
        <description>This field is used to display the action values like Created,Updated,Deleted in Audit trail.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to display the action values like Created,Updated,Deleted</description>
        <inlineHelpText>to display the action values like Created,Updated,Deleted</inlineHelpText>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Attachment_Id__c</fullName>
        <description>This field is used to save attachment name</description>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>To save the description of the filed</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Equipment_And_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with  Inspection Standard Junction  object.</description>
        <label>Equipment And Material</label>
        <referenceTo>QPMS__Equipment_And_Material__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>External Id for Unique ID</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <description>To save api name of the field</description>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <description>To save the filed name</description>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__HistoryObject__c</fullName>
        <description>To differentiate the history object</description>
        <label>HistoryObject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sampling Plan</fullName>
                </value>
                <value>
                    <fullName>Inspection Type</fullName>
                </value>
                <value>
                    <fullName>Equipment_And_Material__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspect_Sample_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspect Sample Criteria</description>
        <label>Inspect Sample Criteria</label>
        <referenceTo>QPMS__Inspect_Sample_Criteria__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspect_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspect Sample</description>
        <label>Inspect Sample</label>
        <referenceTo>QPMS__Inspect_Sample__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with Inspection Standard Criteria object.</description>
        <label>Inspection Standard Criteria</label>
        <referenceTo>QPMS__Inspection_Standard_Criteria__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is look up with inspection standard object.</description>
        <label>Inspection Standard</label>
        <referenceTo>QPMS__Inspection_Standard__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Sub_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Sub Task</description>
        <label>Inspection Sub Task</label>
        <referenceTo>QPMS__Inspection_Sub_Task__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Task</description>
        <label>Inspection Task</label>
        <referenceTo>QPMS__Inspection_Task__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Type_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with inspection type task object.</description>
        <label>Inspection Type Task</label>
        <referenceTo>QPMS__Inspection_Type_Task__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Type</description>
        <label>Inspection Type</label>
        <referenceTo>QPMS__Inspection_Type__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is look up with inspection object.</description>
        <label>Inspection</label>
        <referenceTo>QPMS__Inspection__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <description>To save the last modified by user</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with Material object.</description>
        <label>Material</label>
        <referenceTo>QPMS__Material__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <description>To save new value in history object</description>
        <label>NewValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <description>To save the object name</description>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <description>To save the old value</description>
        <label>OldValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used for audit trail.</description>
        <label>Purchase Order</label>
        <referenceTo>QPMS__Purchase_Order__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sampling Plan</description>
        <label>Sampling Plan</label>
        <referenceTo>QPMS__Sampling_Plan__c</referenceTo>
        <relationshipLabel>Inspection History</relationshipLabel>
        <relationshipName>Inspection_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <description>To save related object</description>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sampling Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is for to show the value is created/updated</description>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check record deleted or not</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Inspection History</label>
    <nameField>
        <displayFormat>IH-{00000}</displayFormat>
        <label>Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>